; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/powermac/extr_cuda.c_cuda_tip.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/powermac/extr_cuda.c_cuda_tip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cuda_softc = type { i32 }

@vBufB = common dso_local global i32 0, align 4
@vPB5 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cuda_softc*)* @cuda_tip to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cuda_tip(%struct.cuda_softc* %0) #0 {
  %2 = alloca %struct.cuda_softc*, align 8
  %3 = alloca i32, align 4
  store %struct.cuda_softc* %0, %struct.cuda_softc** %2, align 8
  %4 = load %struct.cuda_softc*, %struct.cuda_softc** %2, align 8
  %5 = load i32, i32* @vBufB, align 4
  %6 = call i32 @cuda_read_reg(%struct.cuda_softc* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @vPB5, align 4
  %8 = xor i32 %7, -1
  %9 = load i32, i32* %3, align 4
  %10 = and i32 %9, %8
  store i32 %10, i32* %3, align 4
  %11 = load %struct.cuda_softc*, %struct.cuda_softc** %2, align 8
  %12 = load i32, i32* @vBufB, align 4
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @cuda_write_reg(%struct.cuda_softc* %11, i32 %12, i32 %13)
  ret void
}

declare dso_local i32 @cuda_read_reg(%struct.cuda_softc*, i32) #1

declare dso_local i32 @cuda_write_reg(%struct.cuda_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
